fixed the wrap around

--- a/contentPage.css
+++ b/contentPage.css
@@ -77,24 +77,24 @@ body
 .timelineEntry
 {
 	float: left;
-	width: 100%;
+	width: auto;
 }
 
 .timelineLeftSide
 {
 	float: left;
-	width: 48%;
+	width: auto;
 	padding: 1%;
 	text-align: center;
 }
 
-.timelineRightSide
+.timelineRightSide > img
 {
 	float: left;
-	width: 48%;
+	width: 49%;
 	padding-top: 3%;
 	padding-bottom: 3%;
-	padding-right: 2%;
+	padding-right: 1%;
 	text-align: left;
 }
 
@@ -177,3 +177,45 @@ a:visited {
 	display: block; padding: 15px 40px;
 	color: #000000; text-decoration: none;
 }
+
+@media(max-width: 900px) {
+	.container {
+		margin-left: .8em;
+		margin-right: .8em;
+	}
+}
+@media(max-width: 480px) {
+	.container{
+		margin-left: 0em;
+		margin-right: 0em;
+		padding-left: 0em;
+		padding-right: 0em;
+
+	}
+	h1{
+		font-style: normal;
+		font-size: 120%;
+	}
+	img{
+		display: block;
+		max-width: 100%;
+		width: auto;
+		height: auto;
+	}
+	td{
+		padding: 0px;
+	}
+	.logo{
+		
+		padding-left: 0em;
+		padding-top: 0em;
+		padding-bottom: 0em;
+		margin-top: -18em;
+	}
+	.logo img{
+		width: 50px;
+		height: 50px;
+		visibility: hidden;
+	}	
+}
+
